--- a/src/App.css
+++ b/src/App.css
@@ -1985,38 +1985,38 @@ body {
 
 /*PALETTE A*/
 
-.series-color {
-    background-color: rgba(231, 30, 183, .75);
-    /*mix-blend-mode: multiply;*/
-}
-.pro-series-color {
-    background-color: rgba(185, 24, 147, 0.75);
-    /*mix-blend-mode: multiply;*/
-}
-.parties-color {
-    background-color: rgba(190, 190, 190, 0.75);
-    /*mix-blend-mode: multiply;*/
-}
-
-/*.series-color:hover{*/
-/*background-color: rgba(231,30,183,1);*/
-
+/*.series-color {*/
+    /*background-color: rgba(231, 30, 183, .75);*/
+    /*!*mix-blend-mode: multiply;*!*/
+/*}*/
+/*.pro-series-color {*/
+    /*background-color: rgba(185, 24, 147, 0.75);*/
+    /*!*mix-blend-mode: multiply;*!*/
+/*}*/
+/*.parties-color {*/
+    /*background-color: rgba(190, 190, 190, 0.75);*/
+    /*!*mix-blend-mode: multiply;*!*/
 /*}*/
 
-.drop-in-color {
-    background-color: rgba(255, 77, 71, .75);
-}
+/*!*.series-color:hover{*!*/
+/*!*background-color: rgba(231,30,183,1);*!*/
 
-.camp-color {
-    background-color: rgba(255, 154, 0, .75);
-}
+/*!*}*!*/
 
-/*.camp-color:hover {*/
-/*background-color: rgba(255,154,0,1);*/
+/*.drop-in-color {*/
+    /*background-color: rgba(255, 77, 71, .75);*/
 /*}*/
-.special-color {
-    background-color: rgba(255, 219, 0, 1);
-}
+
+/*.camp-color {*/
+    /*background-color: rgba(255, 154, 0, .75);*/
+/*}*/
+
+/*!*.camp-color:hover {*!*/
+/*!*background-color: rgba(255,154,0,1);*!*/
+/*!*}*!*/
+/*.special-color {*/
+    /*background-color: rgba(255, 219, 0, 1);*/
+/*}*/
 
 /*PALETTE B*/
 
@@ -2493,7 +2493,7 @@ container-hover {
     flex-direction: column;
     height: 100px;
     justify-content: space-around;
-    margin-top: -20px;
+    margin-top: -21px;
     padding: 10px;
     width: 250px;
     z-index: 9999;
