--- a/src/App.css
+++ b/src/App.css
@@ -2045,7 +2045,7 @@ body {
     box-shadow: none;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     min-height: 0;
     padding-top: 0;
 
