--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -566,7 +566,7 @@
     /*background-color: grey;*/
     width: 100%;
     height:100%;
-    background-image: url('./img/square-img.jpeg');
+    /*background-image: url('./img/square-img.jpeg');*/
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
