--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -767,6 +767,7 @@ Button.btn-2:hover {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom:3px;
+    margin-top:-1px;
     /*min-width:100px;*/
 }
 
