--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -65,7 +65,7 @@
     background-size: 100%;
 }
 .day.minecon {
-    background-image: url("img/creeper.jpg");
+    background-image: url("img/creeper.png");
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
