Fix price font, sort day view by series

--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -651,7 +651,7 @@ Button.btn-2:hover {
 
     /*background-color: #00cb00;*/
 }
-.price-text {
+.price-text-btn1 {
     font-size:26px;
 }
 .former-price {
