--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -845,3 +845,57 @@ Button.btn-2:hover {
     color: var(--lightColor);
     padding-top:5px;
 }
+
+.day-view {
+    display: grid;
+    grid-template-rows: repeat(25, 1fr);
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 0px;
+    background-color: #ffffff;
+    min-height:500px;
+    width:200px;
+    padding:5px;
+    padding-top:20px
+}
+.time-display {
+    font-size:11px;
+    color: var(--mediumColor);
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    margin-top:-5px;
+    margin-right: 2px;
+}
+.time-1, .time-2, .time-3 {
+    font-size:10px;
+    color: var(--lightColor);
+}
+.time-block {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    padding: 2px;
+    margin-left:5px;
+    margin-right: 5px;
+    border-radius: 2px;
+    box-shadow: var(--shadow);
+    color: rgba(255, 255, 255, 0.75);
+}
+.time-block.striped {
+    background: repeating-linear-gradient(
+            45deg,
+            rgba(255, 0, 0, 0.2),
+            rgba(255, 0, 0, 0.2) 5px,
+            rgba(255, 0, 0, 0.5) 5px,
+            rgba(255, 0, 0, 0.5) 10px
+    );
+    box-shadow: none;
+    cursor: not-allowed;
+    color: rgba(0, 0, 0, 0.75);
+}
+.age-notification {
+    line-height: 13px;
+}
