--- a/src/App.css
+++ b/src/App.css
@@ -1924,7 +1924,7 @@
     align-content: stretch;
 }
 .cart-placeholder {
-    width: 340px;
+    max-width: 340px;
     align-self: flex-end;
     justify-self: flex-end;
     flex-shrink: 0;
