--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -290,6 +290,7 @@
     /*width:20%;*/
     /*margin-left:-100px;*/
     max-width:500px;
+    min-width:360px;
     margin-top:30px;
     position: relative;
 }
