--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -851,11 +851,18 @@ Button.btn-2:hover {
     grid-template-rows: repeat(25, 1fr);
     grid-template-columns: 1fr 3fr;
     grid-gap: 0px;
-    background-color: #ffffff;
+    /*background-color: #ffffff;*/
+    background-color: transparent;
     min-height:500px;
     width:200px;
     padding:5px;
-    padding-top:20px
+    padding-top:20px;
+    box-shadow: none;
+    position:relative;
+    float:left;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
 }
 .time-display {
     font-size:11px;
@@ -896,6 +903,41 @@ Button.btn-2:hover {
     cursor: not-allowed;
     color: rgba(0, 0, 0, 0.75);
 }
+
+.cart-placeholder {
+    align-self: flex-start;
+    margin-left:15px;
+    position:relative;
+    float:left;
+    margin-top:-10px;
+    top:210px;
+}
+
 .age-notification {
-    line-height: 13px;
+    line-height: 20px;
+    margin-top:20px;
+    margin-bottom:10px
+}
+.my-day-selection-box {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    font-size: 14px;
+    font-weight: lighter;
+    text-align: center;
+    position:relative;
+    margin:5px;
+    padding: 5px;
+    margin-bottom:-10px;
+    float:left;
+    cursor: pointer;
+    color: var(--lightColor);
+}
+
+.selected-day-of-week {
+    color: #333;
+    /*text-decoration: underline;*/
+    /*font-size: 120%;*/
+    font-weight: 800;
+    border-bottom: solid 2px #333;
+    padding-bottom: 2px;
 }
