--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -895,7 +895,9 @@ Button.btn-2:hover {
     display:flex;
     flex-direction: column;
     margin-right:10px;
-    margin-top:20px;
+    margin-top:50px;
+    box-shadow: none;
+    background-color: transparent;
 
 }
 .time-display {
@@ -918,14 +920,21 @@ Button.btn-2:hover {
     justify-content: center;
     justify-items: center;
     align-content: center;
-    padding: 2px;
-    margin-left:5px;
-    margin-right: 5px;
+    margin-left:7px;
+    margin-right:7px;
+    padding: 3px;
     border-radius: 2px;
-    box-shadow: var(--shadow);
-    color: rgba(255, 255, 255, 0.75);
+    /*box-shadow: var(--shadow);*/
+    background-color: rgba(255, 255, 255, 0.75);
+    color: #333;
+    font-size: 13px;
+    line-height:15px;
+    font-weight: normal;
+    border-top:solid 2px #333;
+    border-bottom:solid 2px #333;
+    margin-top:-2px;
 }
-.time-block.striped {
+.time-block.not-allowed {
     background: repeating-linear-gradient(
             45deg,
             rgba(255, 0, 0, 0.2),
@@ -936,6 +945,43 @@ Button.btn-2:hover {
     box-shadow: none;
     cursor: not-allowed;
     color: rgba(0, 0, 0, 0.75);
+}
+.time-block.warning {
+    background: repeating-linear-gradient(
+            45deg,
+            rgb(255, 219, 214),
+            rgb(255, 219, 214) 5px,
+            rgb(255, 130, 130) 5px,
+            rgb(255, 130, 130) 10px
+    );
+    color: rgba(0, 0, 0, 0.75);
+    cursor: not-allowed;
+    z-index:1002;
+}
+.time-block.in-cart {
+    background: repeating-linear-gradient(
+            45deg,
+            rgba(54, 255, 0, 0.3),
+            rgba(54, 255, 0, 0.3) 5px,
+            rgba(54, 255, 0, 0.7) 5px,
+            rgba(54, 255, 0, 0.7) 10px
+    );
+    color: rgba(0, 0, 0, 0.75);
+}
+.time-block.owned {
+    background-color: rgba(0, 207, 57, 0.75);
+    cursor: inherit;
+}
+.time-block.purchasable {
+    background-color: rgba(255, 90, 90, 0.75);
+    /*border: dashed 1px #333;*/
+    cursor: pointer;
+    box-shadow: var(--shadow);
+    color: white;
+}
+.time-block.purchasable:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .cart-placeholder {
