--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -19,7 +19,7 @@
     --calendarColor: rgb(151,151,151);
     --allAgesColor: rgba(0, 0, 0, 0.75);
     --seriesColor : rgba(231, 30, 183, .75);
-    --proSeriesColor : rgba(185, 24, 147, 0.75);
+    --proSeriesColor : rgba(185,200,147,.75);
     --partiesColor : rgba(190, 190, 190, 0.75);
     --campColor : rgba(255, 154, 0, .75);
     --specialColor : rgba(255, 219, 0, 1);
