--- a/src/AltViews.css
+++ b/src/AltViews.css
@@ -663,6 +663,7 @@
     flex-direction: column;
     justify-items: stretch;
     /*height: 40px;*/
+    margin-left:4%;
 }
 .bottom-container-new {
     /*display: none;*/
@@ -679,16 +680,7 @@
     /*box-shadow: 0px 0px 10px #aaa;*/
 /*}*/
 
-.seasons-button-container {
-    display: flex;
-    flex-direction: row;
-    justify-items: stretch;
-    /*height: 40px;*/
-}
-.season-button {
-    width:30%;
-    margin: auto;
-}
+
 .or-thing {
     display: flex;
     flex-direction: column;
@@ -724,9 +716,7 @@ Button.btn-3:hover {
 
     background-color: #004293;
 }
-.season-button {
-    margin-top:30px;
-}
+
 Button.btn-2:hover {
 
     /*background-color: #00cb00;*/
